feat: add api for departments
