# config/routes.rb
@@ -2,6 +2,7 @@ Rails.application.routes.draw do
   namespace :api do
     namespace :v1 do
       resources :employees
+      resources :departments
     end
   end
   mount Rswag::Ui::Engine => '/api-docs'
